@@ -15,11 +15,12 @@ namespace BrawlCrate
     internal static class Program
     {
         //Make sure this matches the tag name of the release on github exactly
-        public static readonly string TagName = "BrawlCrate_v0.26b";
+        public static readonly string TagName = "BrawlCrate_v0.26bHotfix1";
 
-        public static readonly string UpdateMessage = @"Updated to BrawlCrate v0.26b! This release:
+        public static readonly string UpdateMessage = @"Updated to BrawlCrate v0.26b Hotfix 1! This release:
 - Fixes bug in which Maya couldn't read exported anims
 - Fixes bug in which sorting textures for an MDL0 would instead sort objects
+- (Hotfix 1) Fixes anim exporter bug when exporting animations for a model with non-sequential bonesets
 
 Full changelog can be found in the installation folder: " + '\n' + AppDomain.CurrentDomain.BaseDirectory +
                                                       "Changelog.txt";
