@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.26b
+BrawlCrate - v0.26b Hotfix 1
 Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,9 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.26b Hotfix 1 - (9/16/2019)
+ . Fix bug in which animations for models with non-sequential bonesets wouldn't export as anim properly
  
  - BrawlCrate v0.26b - (9/13/2019)
  . Rewrite anim exporter. Maya now correctly reads BrawlCrate-exported anim files
